test/bad/27.zlus

(* This program should be rejected because y must be defined at discrete instants *)
(* only *)

let hybrid g (e,s) = y where
  rec der t = 1.0 init -1.0 reset z -> -1.0
  and z = up(t)

  and init y = 0
  and match e with
      | true -> do done
      | false ->
          do
            present
            | s(true) -> do y = (let rec o = 0 -> pre o + 1 in o) done
            | s(false) -> do done
            else do y = 0 done
          done

let hybrid main () =
  let emit s = true in
  f (true, s)

